gitops/argocd/gatekeeper/required-resources-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredResources
metadata:
  name: require-cpu-memory-limits-requests
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec: 
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - dev
  parameters: 
    resources:
      - "requests.cpu"
      - "requests.memory"
      - "limits.cpu"
      - "limits.memory"
